# htmlplotlib

./: .gitignore  README.md  TODO  setup.cfg  setup.cfg.orig
example/: simple.py  test_html_heatmap.ipynb
htmlplotlib/: __init__.py  color_ranges.py  gradient.py  html_heatmap.py
